--- a/src/components/Items/Items.scss
+++ b/src/components/Items/Items.scss
@@ -1,3 +1,8 @@
 .items {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-evenly;
   margin-bottom: 8rem;
+  max-width: 600px;
 }
